_sass/media.scss
.logo-wrap {
  width: 98px;
  height: 40px;
  .tdsvp-navbar .navbar-header & {
    display: block !important;
    width: 80px;
    height: 32px;
    margin: 8px 0 0 15px;
    @include phones {
      display: none !important;
    }
  }
}

.img-wrap {
  width: 200%;
  margin-left: -50%;
  position: relative;
  @include phones {
    width: 150%;
    margin-left: -25%;
  }
  @include tablets {
    width: 100%;
    margin-left: 0;
  }
  .item & {
    z-index: 100;
  }
  .item.active & {
    z-index: 200;
  }
}

